change rem to px and add viewport and width=device-width (conent attribute in header)

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"  name="viewport" content="width=device-width">
   <title>Expensify App</title>
   <link rel="stylesheet" type="text/css" href="/dist/styles.css"/>
 </head>
